[package]
name = "bye"
version = "0.8.0"
edition = "2021"
repository = "https://github.com/fasterthanlime/bye.git"
authors = ["Amos Wenger <amos@bearcove.net>"]
description = "Testing cargo-dist's happy path"

[dependencies]

[workspace.metadata.release]
publish = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
